# lightpup

./: .gitignore  LICENSE  README.md
.cursor/rules/: api-contracts.mdc  backend-rust-axum.mdc  core.mdc  documentation.mdc  frontend-react-typescript.mdc
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_auth.sql  003_buildpacks.sql  004_application_node.sql  005_app_content.sql  006_preview_containers.sql  007_blue_green.sql  008_scheduled_jobs.sql  009_users_role.sql  010_invite_tokens.sql  011_project_members.sql  012_project_and_app_env.sql  013_user_permissions.sql
backend/src/: lib.rs  main.rs
backend/src/api/: applications.rs  auth.rs  cron_jobs.rs  dashboard.rs  deploy.rs  deployments.rs  error.rs  github.rs  instance.rs  invites.rs  mod.rs  permissions.rs  previews.rs  projects.rs  proxy.rs  servers.rs  ssl.rs  types.rs  users.rs  webhooks.rs
backend/src/crypto/: mod.rs
backend/src/db/: applications.rs  auth.rs  dashboard.rs  deployments.rs  env_vars.rs  environments.rs  invite_tokens.rs  mod.rs  nodes.rs  previews.rs  project_members.rs  projects.rs  rows.rs  scheduled_jobs.rs  settings.rs  types.rs  user_permissions.rs
backend/src/docker/: mod.rs
backend/src/proxy/: mod.rs
backend/src/scheduler/: mod.rs
backend/src/sync/: mod.rs
backend/src/tls/: mod.rs
backend/tests/: db_deployments.rs
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: ErrorBoundary.tsx  TerminalBar.tsx  TerminalOverlay.tsx
frontend/src/config/: nav.tsx
frontend/src/contexts/: AuthContext.tsx  TerminalOverlayContext.tsx  ToastContext.tsx
frontend/src/hooks/: useAsyncData.ts
frontend/src/lib/: api.ts  appPresets.ts  dockerHub.ts  storage.ts  terminalTheme.ts
frontend/src/pages/: ApplicationDetailPage.tsx  DashboardPage.tsx  (+15 more)
(+44 files in other folders)
