[package]
name = "lightpup"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "lightpup"
path = "src/main.rs"

[lib]
name = "lightpup"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.16"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "set-header"] }
governor = "0.6"
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
reqwest = { version = "0.12", features = ["json"] }
cookie = "0.18"
urlencoding = "2"
headers = "0.3"
camino = "1"
directories = "5"
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
constant_time_eq = "0.3"
argon2 = "0.5"
totp-rs = { version = "5", features = ["otpauth", "gen_secret"] }
rand = "0.8"
http = "1"
tokio-rustls = "0.26"
rustls = "0.23"
acme-lib = "0.9"
rustls-pemfile = "2"
webpki-roots = "0.26"
pem = "3"
pty-process = { version = "0.5", features = ["async"] }
rsa = "0.9"
x509-parser = "0.16"
rcgen = "0.13"
der-parser = "9"

[target.'cfg(not(target_env = "musl"))'.dependencies]
jemallocator = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.dev]
opt-level = 0
